separating js files
new js files for each page, minor edits

--- a/css/styles.css
+++ b/css/styles.css
@@ -390,7 +390,7 @@ button.filter-button:hover {
     transition: 0.2s ease-in-out;
 }
 
-.benefits .disability .social-science {
+.benefits .disability .social-science .other {
     display: block;
 }
    
